--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <p>ℹ️ Security Notice:</p>
             <p>- All processing happens securely on our servers</p>
             <p>- Your data is never stored or shared</p>
-            <p>- Webhook URLs are fully protected</p>
+            <p>- Network URLs are fully protected</p>
         </div>
     </div>
 
